@@ -94,6 +94,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #26616: Fixed a bug in datetime.astimezone() method.
+
 - Issue #21925: :func:`warnings.formatwarning` now catches exceptions on
   ``linecache.getline(...)`` to be able to log :exc:`ResourceWarning` emitted
   late during the Python shutdown process.
